# FASTAPI_TODO_API

./: Dockerfile  FASTAPI+Poetry+Docker テンプレ.txt  FastAPI+SQLAlchemyテンプレート.txt  README.md  demo.db  docker-compose.yaml  pyproject.toml  render.yaml  requirements.txt  ディレクトリ構成.txt  学習用メモ.txt  非同期対応ライブラリ一覧.txt
api/: auth.py  db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py  user.py
api/models/: __init__.py  task.py  user.py
api/routers/: __init__.py  auth.py  done.py  task.py
api/schemas/: done.py  task.py  user.py
static/: app.js  index.html  style.css
tests/: test_main.py
