[project]
name = "fastapi-todo-api"
version = "0.1.0"
description = ""
authors = [
    {name = "user",email = "user@email.com"}
]
requires-python = ">=3.10"
dependencies = [
    "uvicorn (>=0.41.0,<0.42.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "asyncpg (>=0.27.0,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
